# mux-swarm

./: .gitignore  App.cs  CONTRIBUTING.md  LICENSE  MEMORY.md  McpAiTool.cs  MuxSwarm.csproj  MuxSwarm.slnx  Program.cs  README.md
Context/: DOCS.md  ONBOARD.md
MuxSwarm.Tests/: MuxSwarm.Tests.csproj
Runtime/: MEMORY.md  discord_bridge.py  pyproject.toml  signal_bridge.py  telegram_bridge.py
Setup/: BinaryResolver.cs  McpServerDefaults.cs  Setup.cs  SwarmDefaults.cs
Skills/bundled/mcp-swagger/scripts/: pyproject.toml
Skills/bundled/mcp-swagger/scripts/mcp_swagger_cli/: cli.py  parser.py
Skills/bundled/mcp-swagger/scripts/mcp_swagger_cli/templates/: README.md.j2  main.py.j2
State/: ContinousStateManager.cs  CurrentStateMetadata.cs  DaemonCommand.cs  DaemonRunner.cs  DynamicWorkflow.cs  HookWorker.cs  Mailbox.cs  Relauncher.cs  SelfUpdater.cs  ServiceRegistration.cs  SeshPersistor.cs  TaskBoard.cs  Workflow.cs  WorkflowHelper.cs  WorkflowRun.cs
Utils/: ActivityTimeout.cs  AgentConfig.cs  AppConfig.cs  AutoInject.cs  CliCmdUtils.cs  CliProxyClaudePolicy.cs  CodeReview.cs  Common.cs  CompacterConfig.cs  ContextCap.cs  CostLedger.cs  CronExpression.cs  CronNaturalLanguage.cs  CustomHeaderPolicy.cs  DaemonConfig.cs  DaemonTrigger.cs  DecomposeConfig.cs  DelegationStore.cs  DepResolver.cs  DetachedRunner.cs  EmptyContentSanitizerClient.cs  EscapeKeyListener.cs  ExecutionLimits.cs  FallbackReader.cs  FilesystemConfig.cs  Help.cs  HookClause.cs  HookConfig.cs  HookEvent.cs  InteractiveSessionRegistry.cs  JsonRpcResponse.cs  LiveTokenMeter.cs  LlmProviderConfig.cs  LlmProvidersConfig.cs  LocalAiFunctions.cs  McpServerConfig.cs  MetaCommandDispatch.cs  ModelOpts.cs  ModelPricing.cs  MonacoAssets.cs  (+42 more)
docs/: README.md  acp.md  architecture.md  automation.md  (+12 more)
(+239 files in other folders)
